--- a/src/CadpazBundle/Resources/views/Relatorios/filtros.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/filtros.html.twig
@@ -33,7 +33,7 @@
         }
         else if (cval === 'idadeAtual' || cval === 'idadeAtendimento')
         {
-            $("#form_valor").replaceWith('<input type="number" min="0" max="120" id="form_valor" name="form[valor]">'); 
+            $("#form_valor").replaceWith('<input style="width: 100%" type="number" min="0" max="120" id="form_valor" name="form[valor]">'); 
             
             $("#form_comparacao").replaceWith('<select style="width: 100%" id="form_comparacao" name="form[comparacao]">' +
                   '<option value="=">igual a</option>' +
@@ -107,7 +107,7 @@
         }
         else if (cval === 'quantosMoram')
         {
-            $("#form_valor").replaceWith('<input type="number" min="0" max="20" id="form_valor" name="form[valor]">'); 
+            $("#form_valor").replaceWith('<input style="width: 100%" type="number" min="0" max="20" id="form_valor" name="form[valor]">'); 
             
             $("#form_comparacao").replaceWith('<select style="width: 100%" id="form_comparacao" name="form[comparacao]">' +
                   '<option value="=">igual a</option>' +
@@ -120,7 +120,7 @@
         }
         else if (cval === 'numeroDeFilhos')
         {
-            $("#form_valor").replaceWith('<input type="number" min="0" max="20" id="form_valor" name="form[valor]">'); 
+            $("#form_valor").replaceWith('<input style="width: 100%" type="number" min="0" max="20" id="form_valor" name="form[valor]">'); 
             
             $("#form_comparacao").replaceWith('<select style="width: 100%" id="form_comparacao" name="form[comparacao]">' +
                   '<option value="=">igual a</option>' +
