--- a/src/CadpazBundle/Resources/views/Caso/list.html.twig
+++ b/src/CadpazBundle/Resources/views/Caso/list.html.twig
@@ -2,7 +2,12 @@
     {#{% render controller('CadpazBundle:Caso:view', {'id': caso.id}) %}#}
     <div class="telefone_endereco_secao">
         {% set num = caso.atendimentos|length %}
-        <strong><a title="{{ caso.descricao }}" class="casoView" href="{{ path('caso_view', {'id': caso.id}) }}">{{ caso.nome }}</a></strong>{{ num == 0?" - Nenhum atendimento": " - " ~ num ~ " atendimento" }}{{ num>1?"s":"" }}<br>
+        <div class="telefoneTitulo">
+        <a title="{{ caso.descricao }}" class="casoView" href="{{ path('caso_view', {'id': caso.id}) }}">{{ caso.nome }}</a>
+        </div>
+        <div class="documento">
+        {{ num == 0?"Nenhum atendimento": num ~ " atendimento" }}{{ num>1?"s":"" }}
+        </div>
     </div>
     <div class="spacer"></div>
 {% endfor %}
