--- a/src/CadpazBundle/Resources/views/Telefone/index.html.twig
+++ b/src/CadpazBundle/Resources/views/Telefone/index.html.twig
@@ -1,9 +1,11 @@
 {% for telefone in telefones %}
                     <div class="telefone_endereco_secao">
-                        Numero: {{ telefone.numero }}<br />
+                        <div class="telefoneTitulo"><strong>Numero:</strong> {{ telefone.numero }}</div>
+                        <div class="documento">
                         Tipo: {{ telefone.tipo }}<br />
                         {{ telefone.padrao ? "Telefone padrão<br>" : "" }}
                         Obs: {{ telefone.obs }}
+                        </div>
                     </div>
                     <div class="spacer"></div>
                 {% endfor %}
