mascara no telefone atualizada para nono digito

--- a/src/CadpazBundle/Resources/views/Telefone/new.html.twig
+++ b/src/CadpazBundle/Resources/views/Telefone/new.html.twig
@@ -40,6 +40,6 @@
             e.preventDefault();
         });
         jQuery(function($){
-                $("#cadpazbundle_telefone_numero").mask("(99) 099999999",{placeholder:"(__) _________"});
+                $("#cadpazbundle_telefone_numero").mask("(99) 099999999");
             });
     </script>
